# morphing-rovers-esa

./: README.md  gitignore  pyproject.toml
project/morphing_rovers/: create_submission.py  morphing_udp.py  utils.py
project/morphing_rovers/src/: config.yml  differential_evolution.py  main.py  run_es_chromosome.py  run_fitness.py  run_init_chromosome.py  utils.py
project/morphing_rovers/src/autoencoder/: main.py  utils.py
project/morphing_rovers/src/autoencoder/dataset/: torch_dataset.py
project/morphing_rovers/src/autoencoder/experiments/: session_1
project/morphing_rovers/src/autoencoder/models/: model.py
project/morphing_rovers/src/autoencoder/trainers/: trainer.py  trainer_cnn_autoencoder.py
project/morphing_rovers/src/clustering/: README.md  main.py  utils.py
project/morphing_rovers/src/clustering/experiments/: pca.p  (+1 more)
project/morphing_rovers/src/evolution_strategies/: evolution_strategies.py  utils.py
project/morphing_rovers/src/imitation_learning/: README.md  arc_trajectories.py  config.yml  morphing_udp_modified.py  optimization.py  run.py
project/morphing_rovers/src/mode_optimization/: main.py  utils.py
project/morphing_rovers/src/mode_switching_optimization/: main.py  morphing_udp_modified.py  optimization.py  utils.py
project/morphing_rovers/src/neural_network_supervised/: main.py  morphing_udp_modified.py  optimization.py  optimized_control.p  run_fitness.py  utils.py
project/morphing_rovers/src/trained_chromosomes/: chromosome_fitness_2.0211.p  chromosome_fitness_2.0469.p  chromosome_fitness_2.0524.p  fitness_list.p  solution.p
(+575 files in other folders)
