[tool.poetry]
name = "morphing_rovers"
version = "0.1.1"
description = "Optimization challenge ESA's morphing rovers"
authors = [
    "Thomas Uriot"
    # Add your name here
]
readme = "README.md"
packages = [
    { include = "morphing_rovers", from = "project" },
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
pytest = "^7.2.1"
jupyterlab = "^3.6.1"
mypy = "^1.0.0"
ruff = "^0.0.253"
torch = "^2.0.0"
torchvision = "^0.15.1"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
imageio = "^2.27.0"



[tool.poetry.group.docs.dependencies]
mkdocs = "^1.3.0"
mkdocs-material = "^8.4.2"
mkdocs-material-extensions= "^1.0.3"
mknotebooks = "^0.7.1"


[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-select = [
    "SIM",
    "NPY",
    "I",
    "C",
    "N",
    "D100",
    "D101",
    "D102",
    "D103",
    "UP",
    "D2",
    "BLE",
    "ANN",
    "S",
    "ICN",
    "PT",
    "NPY"
]
line-length = 120
show-fixes = true
target-version = "py310"
fix = true
ignore = [
    "ANN101",
    "ANN102",
    "ANN401",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ARG", "S", "D"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "pandas"
ignore_missing_imports = true
